# True_project_7

./: CMakeLists.txt  client.cpp  questions.txt  server.cpp
